--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hydra import initialize, compose\n",
+    "from hydra import compose, initialize\n",
     "from omegaconf import OmegaConf"
    ]
   },
@@ -99,11 +99,13 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import torch\n",
     "import math\n",
-    "from looped_experiments.nano_gpt import Block, LayerNorm\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
     "from torch import nn\n",
-    "import torch.nn.functional as F"
+    "\n",
+    "from looped_experiments.nano_gpt import Block, LayerNorm"
    ]
   },
   {
@@ -113,18 +115,19 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class TransformerBase(nn.Module):\n",
+    "class MaskedTransformer(nn.Module):\n",
     "    def __init__(self, cfg):\n",
     "        super().__init__()\n",
     "        self.cfg = cfg\n",
-    "        block_size = cfg.n_positions * 2 + 1  # input, output pairs + 1 for the target\n",
+    "        self.freq = 2 # one input, one output, and so on\n",
+    "        self.block_size = cfg.n_positions * self.freq + 1  # input, output pairs + 1 for the target\n",
     "        self.transformer = nn.ModuleDict(dict(\n",
-    "            wpe=nn.Embedding(block_size, cfg.n_embd),\n",
+    "            wpe=nn.Embedding(self.block_size, cfg.n_embd),\n",
     "            drop=nn.Dropout(cfg.dropout),\n",
     "            h=nn.ModuleList([Block(cfg) for _ in range(cfg.n_layer)]),\n",
     "            ln_f=LayerNorm(cfg.n_embd, bias=cfg.bias),\n",
     "        ))\n",
-    "        if self.__class__ == TransformerBase:\n",
+    "        if self.__class__ == MaskedTransformer:\n",
     "            self._init_all_params(cfg.n_layer)\n",
     "\n",
     "    def _init_weights(self, module):\n",
@@ -145,14 +148,14 @@
     "\n",
     "    def forward(self, embs):\n",
     "        device = embs.device\n",
-    "        _, t = embs.size()\n",
-    "        assert t <= self.config.block_size, f\"Cannot forward sequence of length {t}, block size is only {self.config.block_size}\"\n",
+    "        bs, t, dim = embs.size()\n",
+    "        assert t <= self.block_size, f\"Cannot forward sequence of length {t}, block size is only {self.block_size}\"\n",
     "        pos = torch.arange(0, t, dtype=torch.long, device=device)\n",
     "\n",
     "        pos_emb = self.transformer.wpe(pos)\n",
     "        x = self.transformer.drop(embs + pos_emb)\n",
     "        for block in self.transformer.h:\n",
-    "            x = block(x)\n",
+    "            x = block(x+embs)\n",
     "        x = self.transformer.ln_f(x)\n",
     "\n",
     "        return x"
@@ -165,7 +168,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class Transformer(TransformerBase):\n",
+    "class Transformer(MaskedTransformer):\n",
     "    '''Transformer for tasks from in-context learning'''\n",
     "\n",
     "    def __init__(self, cfg):\n",
@@ -176,16 +179,16 @@
     "        self._init_all_params()\n",
     "\n",
     "    def create_prompt(self, xs, ys):\n",
-    "        n_dim = xs.shape[-1]\n",
-    "        y_wide = F.pad(ys.unsqueeze(-1), (0, n_dim - 1), value=0)\n",
-    "        return torch.stack((xs, y_wide), dim=2).flatten(1, 2)[0]\n",
+    "        n_dims = xs.shape[-1]\n",
+    "        y_wide = F.pad(ys.unsqueeze(-1), (0, n_dims - 1), value=0)\n",
+    "        return torch.stack((xs, y_wide), dim=2).flatten(1, 2)\n",
     "\n",
     "    def forward(self, xs, ys):\n",
     "        x = self.create_prompt(xs, ys)\n",
     "        x = self.read_in(x)\n",
     "        x = super().forward(x)\n",
-    "        y = self.read_out(x)\n",
-    "        # y = y[:, self.ind::self.freq, 0] #TODO understand what is this\n",
+    "        y = self.read_out(x).squeeze(-1)\n",
+    "        y = y[:, ::self.freq] # only take the outputs (every other element)\n",
     "        return y"
    ]
   },
@@ -195,17 +198,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from looped_experiments.tasks import LinearRegression, dataloader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = Transformer(cfg.model)\n",
-    "dl = dataloader(LinearRegression(cfg.training.batch_size, **cfg.task))"
+    "#| export\n",
+    "class LoopedTransformer(MaskedTransformer):\n",
+    "    '''Looped transformer for tasks from in-context learning'''\n",
+    "\n",
+    "    def __init__(self, cfg):\n",
+    "        super().__init__(cfg)\n",
+    "        self.read_in = nn.Linear(cfg.n_dims, cfg.n_embd)\n",
+    "        self.read_out = nn.Linear(cfg.n_embd, 1)\n",
+    "\n",
+    "        self._init_all_params()\n",
+    "\n",
+    "    def create_prompt(self, xs, ys):\n",
+    "        n_dims = xs.shape[-1]\n",
+    "        y_wide = F.pad(ys.unsqueeze(-1), (0, n_dims - 1), value=0)\n",
+    "        return torch.stack((xs, y_wide), dim=2).flatten(1, 2)\n",
+    "\n",
+    "    def forward(self, xs, ys):\n",
+    "        x = self.create_prompt(xs, ys)\n",
+    "        x = self.read_in(x)\n",
+    "        x = super().forward(x)\n",
+    "        y = self.read_out(x).squeeze(-1)\n",
+    "        y = y[:, ::self.freq] # only take the outputs (every other element)\n",
+    "        return y"
    ]
   }
  ],
