more configs and looped transformer

--- a/nbs/01_tasks.ipynb
+++ b/nbs/01_tasks.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "# | export\n",
     "class LinearRegression:\n",
-    "    def __init__(self, bs: int, n_points=30, n_dims=20, std=0.1, sparsity=None, truncated_dims=0):\n",
+    "    def __init__(self, bs: int, n_points=30, n_dims=20, std=0.1, sparsity=None, truncated_dims=0, **kwargs):\n",
     "        \"\"\"\n",
     "        Args:\n",
     "            bs (int): Batch size\n",
