--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -23,10 +23,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/slakter/coding/looped-experiments/.conda/lib/python3.11/site-packages/hydra/_internal/defaults_list.py:251: UserWarning: In 'config': Defaults list is missing `_self_`. See https://hydra.cc/docs/1.2/upgrades/1.0_to_1.1/default_composition_order for more information\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "with initialize(config_path=\"../configs\", version_base=None):\n",
-    "    cfg = compose(\"base\")"
+    "    cfg = compose(\"config\")"
    ]
   },
   {
@@ -38,52 +47,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wandb:\n",
-      "  project: looped-transformer\n",
-      "  log_every_steps: 100\n",
-      "gpu:\n",
-      "  cuda: true\n",
       "model:\n",
       "  family: gpt2\n",
       "  n_embd: 256\n",
-      "  n_layer: 12\n",
+      "  n_layer: 6\n",
       "  n_head: 8\n",
       "  n_dims: 20\n",
       "  n_positions: 101\n",
       "  dropout: 0.0\n",
       "  bias: true\n",
-      "task_name: linear_regression\n",
-      "task:\n",
+      "tasks:\n",
+      "  task_name: linear_regression\n",
       "  n_points: 30\n",
-      "  n_dim: 20\n",
-      "  std: 0.1\n",
+      "  n_dims: 20\n",
+      "  std: 0.0\n",
       "  sparsity: null\n",
       "training:\n",
-      "  batch_size: 64\n",
-      "  learning_rate: 0.0001\n",
+      "  batch_size: 128\n",
+      "  n_epoch: 5\n",
+      "  train_steps: 10000\n",
+      "  eval_steps: 1000\n",
+      "  learning_rate: 0.0002\n",
       "  weight_decay: 0.0\n",
-      "  train_steps: 500000\n",
       "  save_every_steps: 1000\n",
-      "  keep_every_steps: 100000\n",
       "  curriculum:\n",
       "    dims:\n",
       "      start: 5\n",
       "      end: 20\n",
       "      inc: 1\n",
-      "      interval: 5000\n",
+      "      interval: 1000\n",
       "    points:\n",
       "      start: 11\n",
       "      end: 41\n",
       "      inc: 2\n",
-      "      interval: 5000\n",
+      "      interval: 1000\n",
       "    loops:\n",
       "      start: 1\n",
       "      end: 1\n",
       "      inc: 2\n",
-      "      interval: 500\n",
+      "      interval: 100\n",
       "  n_loop_window: 20\n",
-      "out_dir: ./results2/linear_regression_baseline\n",
+      "device: cuda\n",
+      "out_dir: ./results/linear_regression_baseline\n",
       "debug_mode: false\n",
+      "wandb:\n",
+      "  project: looped-transformer\n",
+      "  name: null\n",
+      "  log_every_steps: 50\n",
       "\n"
      ]
     }
@@ -155,7 +165,7 @@
     "        pos_emb = self.transformer.wpe(pos)\n",
     "        x = self.transformer.drop(embs + pos_emb)\n",
     "        for block in self.transformer.h:\n",
-    "            x = block(x+embs)\n",
+    "            x = block(x)\n",
     "        x = self.transformer.ln_f(x)\n",
     "\n",
     "        return x"
@@ -199,27 +209,25 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class LoopedTransformer(MaskedTransformer):\n",
+    "class LoopedTransformer(Transformer):\n",
     "    '''Looped transformer for tasks from in-context learning'''\n",
-    "\n",
     "    def __init__(self, cfg):\n",
     "        super().__init__(cfg)\n",
-    "        self.read_in = nn.Linear(cfg.n_dims, cfg.n_embd)\n",
-    "        self.read_out = nn.Linear(cfg.n_embd, 1)\n",
-    "\n",
-    "        self._init_all_params()\n",
-    "\n",
-    "    def create_prompt(self, xs, ys):\n",
-    "        n_dims = xs.shape[-1]\n",
-    "        y_wide = F.pad(ys.unsqueeze(-1), (0, n_dims - 1), value=0)\n",
-    "        return torch.stack((xs, y_wide), dim=2).flatten(1, 2)\n",
+    "        self.n_loops = cfg.n_loops\n",
+    "        self.n_loop_window = cfg.n_loop_window\n",
     "\n",
     "    def forward(self, xs, ys):\n",
+    "        horizon_start = max(0, self.n_loops - self.n_loop_window)\n",
     "        x = self.create_prompt(xs, ys)\n",
-    "        x = self.read_in(x)\n",
-    "        x = super().forward(x)\n",
-    "        y = self.read_out(x).squeeze(-1)\n",
-    "        y = y[:, ::self.freq] # only take the outputs (every other element)\n",
+    "        z = x = self.read_in(x)\n",
+    "        preds = []\n",
+    "        for i in range(self.n_loops):\n",
+    "            if i < horizon_start:\n",
+    "                with torch.no_grad(): z = super().forward(z) + x\n",
+    "                continue\n",
+    "            z = super().forward(z) + x\n",
+    "            y = self.read_out(z).squeeze(-1)\n",
+    "            preds.append(y[:, ::self.freq])\n",
     "        return y"
    ]
   }
