--- a/nbs/03_training.ipynb
+++ b/nbs/03_training.ipynb
@@ -21,7 +21,8 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "from fastprogress import master_bar, progress_bar\n",
-    "from torch import optim"
+    "from torch import optim\n",
+    "from omegaconf import OmegaConf"
    ]
   },
   {
@@ -150,24 +151,32 @@
     "    def before_fit(self, learn):\n",
     "        learn.stats = {}\n",
     "        self.run = self.wandb.init(project=self.wcfg.project,\n",
-    "                        mode=\"disabled\" if self.cfg.debug_mode else \"online\")\n",
-    "        self.run.config = self.cfg\n",
+    "                                   name=self.wcfg.name,\n",
+    "                                   config=OmegaConf.to_container(self.cfg),\n",
+    "                                   mode=\"disabled\" if self.cfg.debug_mode else \"online\")\n",
     "\n",
     "    def after_batch(self, learn):\n",
     "        if learn.train_step % self.wcfg.log_every_steps == 0:\n",
-    "            self.run.log(\n",
-    "                {\n",
+    "            if learn.model.training:\n",
+    "                self.run.log({\n",
     "                    \"loss\": learn.loss,\n",
     "                    \"lr\": learn.optimizer.param_groups[0]['lr'],\n",
     "                    **learn.stats\n",
-    "                },\n",
-    "                step=learn.train_step,\n",
-    "            )\n",
+    "                }, step=learn.train_step)\n",
+    "            else: \n",
+    "                self.run.log({\"valid_loss\": learn.loss}, step=learn.train_step)\n",
     "\n",
     "    def after_fit(self, _): self.run.finish()\n",
-    "    \n",
+    "\n",
     "\n",
     "DEFAULT_CBS = [ToDeviceCB(), SaveModelCB(\"models\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Curriculum for tasks and loops"
    ]
   },
   {
@@ -177,21 +186,28 @@
    "outputs": [],
    "source": [
     "# | export\n",
+    "\n",
     "class CurriculumCB:\n",
     "    def __init__(self, curriculum_config):\n",
     "        self.cfg = curriculum_config\n",
-    "\n",
+    "        \n",
     "    def get_params(self, name, step):\n",
     "        cfg = self.cfg[name]\n",
     "        return min(cfg.end, cfg.start + step // cfg.interval * cfg.inc)\n",
-    "    \n",
+    "\n",
     "    def update_task(self, learn, ds):\n",
-    "        n_dims = self.get_params(\"dims\", learn.train_step)\n",
-    "        ds.task.truncated_dims = ds.task.n_dim - n_dims\n",
     "        ds.task.n_points = self.get_params(\"points\", learn.train_step)\n",
+    "        n_dims = self.get_params(\"dims\", learn.train_step)\n",
+    "        ds.task.truncated_dims = ds.task.n_dims - n_dims\n",
     "        if hasattr(learn, 'stats'):\n",
-    "            learn.stats['n_dims'] = n_dims\n",
     "            learn.stats['n_points'] = ds.task.n_points\n",
+    "            learn.stats['n_dims'] = n_dims\n",
+    "\n",
+    "    def update_model(self, learn):\n",
+    "        learn.model.n_loops = self.get_params(\"loops\", learn.train_step)\n",
+    "        learn.model.n_loop_window = self.cfg[\"loops\"].n_loop_window\n",
+    "        if hasattr(learn, 'stats'):\n",
+    "            learn.stats['n_loops'] = learn.model.n_loops\n",
     "\n",
     "    def after_batch(self, learn):\n",
     "        if learn.model.training: self.update_task(learn, learn.dl_train.dataset)\n",
@@ -217,7 +233,7 @@
    "outputs": [],
    "source": [
     "with initialize(config_path=\"../configs\", version_base=None):\n",
-    "    cfg = compose(\"base\")"
+    "    cfg = compose(\"config\")"
    ]
   },
   {
@@ -227,7 +243,7 @@
    "outputs": [],
    "source": [
     "train = cfg.training\n",
-    "task = LinearRegression(train.batch_size, **cfg.task)\n",
+    "task = LinearRegression(train.batch_size, **cfg.tasks)\n",
     "dl_train = dataloader(task, train.train_steps)\n",
     "dl_eval = dataloader(task, train.eval_steps)"
    ]
