added cli, fixed training

--- a/nbs/01_tasks.ipynb
+++ b/nbs/01_tasks.ipynb
@@ -235,6 +235,20 @@
     "axes[1].scatter(xb[0,:,0], yb[0])\n",
     "axes[2].scatter(xb[0,:,1], yb[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "def get_task_cls(name):\n",
+    "    tasks = {\n",
+    "        \"linear_regression\": LinearRegression\n",
+    "    }\n",
+    "    return tasks[name]"
+   ]
   }
  ],
  "metadata": {
