--- a/nbs/03_training.ipynb
+++ b/nbs/03_training.ipynb
@@ -21,8 +21,8 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "from fastprogress import master_bar, progress_bar\n",
-    "from torch import optim\n",
-    "from omegaconf import OmegaConf"
+    "from omegaconf import OmegaConf\n",
+    "from torch import optim"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "            self.mb.write(f\"Epoch {i} Loss: {self.loss.item()}\")\n",
     "            torch.no_grad()(self.one_epoch)(False)\n",
     "            self.mb.write(f\"Valid Loss: {self.loss.item()}\")\n",
-    "            \n",
+    "\n",
     "    def predict(self, dl=None):\n",
     "        dl = dl or self.dl_valid\n",
     "        self.model.eval()\n",
@@ -92,7 +92,7 @@
     "\n",
     "    def callback(self, nm):\n",
     "        if self.cbs is not None:\n",
-    "            for cb in self.cbs:\n",
+    "            for cb in sorted(self.cbs):\n",
     "                if hasattr(cb, nm): getattr(cb, nm)(self)"
    ]
   },
@@ -109,7 +109,12 @@
     "    return torch.device(\"cuda\" if is_cuda else \"cpu\")\n",
     "\n",
     "\n",
-    "class ToDeviceCB:\n",
+    "class Callback:\n",
+    "    order = 0\n",
+    "    def __gt__(self, other): return self.order > other.order\n",
+    "\n",
+    "\n",
+    "class ToDeviceCB(Callback):\n",
     "    def __init__(self, device=default_device()): self.device = device\n",
     "\n",
     "    def before_fit(self, learn):\n",
@@ -119,7 +124,8 @@
     "        learn.xb, learn.yb = learn.xb.to(self.device), learn.yb.to(self.device)\n",
     "\n",
     "\n",
-    "class FnCallback:\n",
+    "class FnCallback(Callback):\n",
+    "    order = 1\n",
     "    def __init__(self, nm): self.nm = nm\n",
     "\n",
     "    def __call__(self, fn):\n",
@@ -127,20 +133,27 @@
     "        return self\n",
     "\n",
     "\n",
-    "class SaveModelCB:\n",
-    "    def __init__(self, save_dir, save_every_n=1000):\n",
-    "        self.dir, self.save_every_n = Path(save_dir), save_every_n\n",
+    "class SaveModelCB(Callback):\n",
+    "    order = 1\n",
+    "\n",
+    "    def __init__(self, save_dir, save_every_n=1000, max_to_keep=5):\n",
+    "        self.dir, self.save_every_n, self.max_to_keep = Path(save_dir), save_every_n, max_to_keep\n",
     "        self.dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    def after_batch(self, learn):\n",
     "        if learn.train_step % self.save_every_n == 0:\n",
     "            torch.save(learn.model.state_dict(), self.dir / f\"model_{learn.train_step}.pt\")\n",
+    "        files = sorted(self.dir.glob(\"model_*.pt\"), key=lambda x: int(x.stem.split(\"_\")[1]), reverse=True)\n",
+    "        if len(files) > self.max_to_keep:\n",
+    "            for f in files[self.max_to_keep:]: f.unlink()\n",
     "\n",
     "    def after_fit(self, learn):\n",
     "        torch.save(learn.model.state_dict(), self.dir / f\"model_last.pt\")\n",
     "\n",
     "\n",
-    "class WandbCB:\n",
+    "class WandbCB(Callback):\n",
+    "    order = SaveModelCB.order + 10\n",
+    "\n",
     "    def __init__(self, config):\n",
     "        try: import wandb; wandb.require(\"core\")\n",
     "        except ImportError: raise ImportError(\"Please install wandb to use this callback\")\n",
@@ -163,13 +176,18 @@
     "                    \"lr\": learn.optimizer.param_groups[0]['lr'],\n",
     "                    **learn.stats\n",
     "                }, step=learn.train_step)\n",
-    "            else: \n",
+    "            else:\n",
     "                self.run.log({\"valid_loss\": learn.loss}, step=learn.train_step)\n",
     "\n",
-    "    def after_fit(self, _): self.run.finish()\n",
+    "    def after_fit(self, learn):\n",
+    "        for cb in learn.cbs:\n",
+    "            if isinstance(cb, SaveModelCB):\n",
+    "                self.run.save(str(cb.dir / \"model_last.pt\"))\n",
+    "        self.run.finish()\n",
     "\n",
     "\n",
-    "DEFAULT_CBS = [ToDeviceCB(), SaveModelCB(\"models\")]"
+    "def repr_cbs(cbs):\n",
+    "    return \" \".join(cb.__class__.__name__ for cb in cbs)"
    ]
   },
   {
@@ -187,10 +205,10 @@
    "source": [
     "# | export\n",
     "\n",
-    "class CurriculumCB:\n",
+    "class CurriculumCB(Callback):\n",
     "    def __init__(self, curriculum_config):\n",
     "        self.cfg = curriculum_config\n",
-    "        \n",
+    "\n",
     "    def get_params(self, name, step):\n",
     "        cfg = self.cfg[name]\n",
     "        return min(cfg.end, cfg.start + step // cfg.interval * cfg.inc)\n",
@@ -203,15 +221,18 @@
     "            learn.stats['n_points'] = ds.task.n_points\n",
     "            learn.stats['n_dims'] = n_dims\n",
     "\n",
+    "    def after_batch(self, learn):\n",
+    "        if learn.model.training: self.update_task(learn, learn.dl_train.dataset)\n",
+    "        else: self.update_task(learn, learn.dl_valid.dataset)\n",
+    "\n",
+    "\n",
+    "class LoopCB(CurriculumCB):\n",
     "    def update_model(self, learn):\n",
     "        learn.model.n_loops = self.get_params(\"loops\", learn.train_step)\n",
-    "        learn.model.n_loop_window = self.cfg[\"loops\"].n_loop_window\n",
     "        if hasattr(learn, 'stats'):\n",
     "            learn.stats['n_loops'] = learn.model.n_loops\n",
     "\n",
-    "    def after_batch(self, learn):\n",
-    "        if learn.model.training: self.update_task(learn, learn.dl_train.dataset)\n",
-    "        else: self.update_task(learn, learn.dl_valid.dataset)"
+    "    def after_batch(self, learn): self.update_model(learn)"
    ]
   },
   {
@@ -220,10 +241,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hydra import compose, initialize\n",
-    "\n",
-    "from looped_experiments.models import Transformer\n",
-    "from looped_experiments.tasks import *"
+    "from looped_experiments.models import get_loss, get_model\n",
+    "from looped_experiments.tasks import LinearRegression, dataloader\n",
+    "from looped_experiments.utils import get_config"
    ]
   },
   {
@@ -232,8 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with initialize(config_path=\"../configs\", version_base=None):\n",
-    "    cfg = compose(\"config\")"
+    "cfg = get_config(overrides=[\"model=loop\", \"training=loop\"])"
    ]
   },
   {
@@ -254,8 +273,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.manual_seed(42)\n",
-    "model = Transformer(cfg.model)"
+    "@FnCallback(\"before_batch\")\n",
+    "def trans_input(learner): learner.xb = (learner.xb, learner.yb)\n",
+    "\n",
+    "\n",
+    "torch.manual_seed(1)\n",
+    "\n",
+    "model = get_model(cfg.model)\n",
+    "cbs = [ToDeviceCB(), CurriculumCB(cfg.training.curriculum), trans_input, LoopCB(cfg.model.curriculum)]\n",
+    "learn = Learner(model, dl_train, dl_eval, cfg.training.n_epoch, loss_fn=get_loss(cfg.model), cbs=cbs)"
    ]
   },
   {
@@ -264,11 +290,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@FnCallback(\"before_batch\")\n",
-    "def trans_input(learner):  learner.xb = (learner.xb, learner.yb)\n",
-    "\n",
-    "cbs = [WandbCB(cfg), ToDeviceCB(), CurriculumCB(cfg.training.curriculum), trans_input]\n",
-    "learn = Learner(model, dl_train, dl_eval, cfg.training.n_epoch, cbs=cbs)\n",
     "learn.fit(lr=cfg.training.learning_rate)"
    ]
   }
