--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "from looped_experiments.core import *"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,14 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "This repository contains experiments based on [looped-transformer paper](https://arxiv.org/abs/2311.12424)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install"
+    "## Installation"
    ]
   },
   {
@@ -38,7 +28,7 @@
    "metadata": {},
    "source": [
     "```sh\n",
-    "pip install looped_experiments\n",
+    "pip install git+https://github.com/ssslakter/looped-experiments.git\n",
     "```"
    ]
   },
@@ -46,34 +36,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use"
+    "or for editable installation\n",
+    "```sh\n",
+    "git clone https://github.com/ssslakter/looped-experiments.git .\n",
+    "cd looped-experiments\n",
+    "pip install -e .\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
+    "## How to run\n",
+    "To train models, run after installing the package\n",
+    "```sh\n",
+    "launch-exps --help\n",
+    "```\n",
+    "this will show you the config options you can use to run experiments."
    ]
   },
   {
