--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp models"
+    "# | default_exp models"
    ]
   },
   {
@@ -15,107 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hydra import compose, initialize\n",
-    "from omegaconf import OmegaConf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/slakter/coding/looped-experiments/.conda/lib/python3.11/site-packages/hydra/_internal/defaults_list.py:251: UserWarning: In 'config': Defaults list is missing `_self_`. See https://hydra.cc/docs/1.2/upgrades/1.0_to_1.1/default_composition_order for more information\n",
-      "  warnings.warn(msg, UserWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "with initialize(config_path=\"../configs\", version_base=None):\n",
-    "    cfg = compose(\"config\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model:\n",
-      "  family: gpt2\n",
-      "  n_embd: 256\n",
-      "  n_layer: 6\n",
-      "  n_head: 8\n",
-      "  n_dims: 20\n",
-      "  n_positions: 101\n",
-      "  dropout: 0.0\n",
-      "  bias: true\n",
-      "tasks:\n",
-      "  task_name: linear_regression\n",
-      "  n_points: 30\n",
-      "  n_dims: 20\n",
-      "  std: 0.0\n",
-      "  sparsity: null\n",
-      "training:\n",
-      "  batch_size: 128\n",
-      "  n_epoch: 5\n",
-      "  train_steps: 10000\n",
-      "  eval_steps: 1000\n",
-      "  learning_rate: 0.0002\n",
-      "  weight_decay: 0.0\n",
-      "  save_every_steps: 1000\n",
-      "  curriculum:\n",
-      "    dims:\n",
-      "      start: 5\n",
-      "      end: 20\n",
-      "      inc: 1\n",
-      "      interval: 1000\n",
-      "    points:\n",
-      "      start: 11\n",
-      "      end: 41\n",
-      "      inc: 2\n",
-      "      interval: 1000\n",
-      "    loops:\n",
-      "      start: 1\n",
-      "      end: 1\n",
-      "      inc: 2\n",
-      "      interval: 100\n",
-      "  n_loop_window: 20\n",
-      "device: cuda\n",
-      "out_dir: ./results/linear_regression_baseline\n",
-      "debug_mode: false\n",
-      "wandb:\n",
-      "  project: looped-transformer\n",
-      "  name: null\n",
-      "  log_every_steps: 50\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(OmegaConf.to_yaml(cfg))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
+    "# | export\n",
     "import math\n",
     "\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
     "from torch import nn\n",
     "\n",
-    "from looped_experiments.nano_gpt import Block, LayerNorm"
+    "from looped_experiments.nano_gpt import Block, LayerNorm\n",
+    "from looped_experiments.utils import get_config, show_config"
    ]
   },
   {
@@ -124,37 +32,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "class MaskedTransformer(nn.Module):\n",
-    "    def __init__(self, cfg):\n",
+    "    def __init__(self, cfg, freq=2):\n",
     "        super().__init__()\n",
     "        self.cfg = cfg\n",
-    "        self.freq = 2 # one input, one output, and so on\n",
-    "        self.block_size = cfg.n_positions * self.freq + 1  # input, output pairs + 1 for the target\n",
+    "        self.block_size = cfg.n_positions * freq + 1  # input, output pairs + 1 for the target\n",
     "        self.transformer = nn.ModuleDict(dict(\n",
     "            wpe=nn.Embedding(self.block_size, cfg.n_embd),\n",
     "            drop=nn.Dropout(cfg.dropout),\n",
     "            h=nn.ModuleList([Block(cfg) for _ in range(cfg.n_layer)]),\n",
     "            ln_f=LayerNorm(cfg.n_embd, bias=cfg.bias),\n",
     "        ))\n",
-    "        if self.__class__ == MaskedTransformer:\n",
-    "            self._init_all_params(cfg.n_layer)\n",
-    "\n",
-    "    def _init_weights(self, module):\n",
-    "        if isinstance(module, nn.Linear):\n",
-    "            torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
-    "            if module.bias is not None:\n",
-    "                torch.nn.init.zeros_(module.bias)\n",
-    "        elif isinstance(module, nn.Embedding):\n",
-    "            torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
-    "\n",
-    "    def _init_all_params(self):\n",
-    "        # init all weights\n",
-    "        self.apply(self._init_weights)\n",
-    "        # apply special scaled init to the residual projections, per GPT-2 paper\n",
-    "        for pn, p in self.named_parameters():\n",
-    "            if pn.endswith('c_proj.weight'):\n",
-    "                torch.nn.init.normal_(p, mean=0.0, std=0.02 / math.sqrt(2 * self.cfg.n_layer))\n",
+    "        if self.__class__ == MaskedTransformer: init_all_params(self)\n",
     "\n",
     "    def forward(self, embs):\n",
     "        device = embs.device\n",
@@ -168,7 +58,22 @@
     "            x = block(x)\n",
     "        x = self.transformer.ln_f(x)\n",
     "\n",
-    "        return x"
+    "        return x\n",
+    "    \n",
+    "def init_weights(module):\n",
+    "    if isinstance(module, nn.Linear):\n",
+    "        torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
+    "        if module.bias is not None: torch.nn.init.zeros_(module.bias)\n",
+    "    elif isinstance(module, nn.Embedding):\n",
+    "        torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
+    "\n",
+    "def init_all_params(model):\n",
+    "    # init all weights\n",
+    "    model.apply(init_weights)\n",
+    "    # apply special scaled init to the residual projections, per GPT-2 paper\n",
+    "    for pn, p in model.named_parameters():\n",
+    "        if pn.endswith('c_proj.weight'):\n",
+    "            torch.nn.init.normal_(p, mean=0.0, std=0.02 / math.sqrt(2 * model.cfg.n_layer))"
    ]
   },
   {
@@ -177,16 +82,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "class Transformer(MaskedTransformer):\n",
+    "# | export\n",
+    "class Transformer(nn.Module):\n",
     "    '''Transformer for tasks from in-context learning'''\n",
     "\n",
-    "    def __init__(self, cfg):\n",
-    "        super().__init__(cfg)\n",
+    "    def __init__(self, cfg, freq=2):\n",
+    "        super().__init__()\n",
+    "        self.cfg = cfg\n",
+    "        self.freq = freq  # one input, one output, and so on\n",
+    "        self.backbone = MaskedTransformer(cfg, freq)\n",
     "        self.read_in = nn.Linear(cfg.n_dims, cfg.n_embd)\n",
     "        self.read_out = nn.Linear(cfg.n_embd, 1)\n",
     "\n",
-    "        self._init_all_params()\n",
+    "        init_all_params(self)\n",
     "\n",
     "    def create_prompt(self, xs, ys):\n",
     "        n_dims = xs.shape[-1]\n",
@@ -196,9 +104,9 @@
     "    def forward(self, xs, ys):\n",
     "        x = self.create_prompt(xs, ys)\n",
     "        x = self.read_in(x)\n",
-    "        x = super().forward(x)\n",
+    "        x = self.backbone(x)\n",
     "        y = self.read_out(x).squeeze(-1)\n",
-    "        y = y[:, ::self.freq] # only take the outputs (every other element)\n",
+    "        y = y[:, ::self.freq]  # only take the outputs (every other element)\n",
     "        return y"
    ]
   },
@@ -208,27 +116,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "class LoopedTransformer(Transformer):\n",
     "    '''Looped transformer for tasks from in-context learning'''\n",
+    "\n",
     "    def __init__(self, cfg):\n",
     "        super().__init__(cfg)\n",
     "        self.n_loops = cfg.n_loops\n",
     "        self.n_loop_window = cfg.n_loop_window\n",
-    "\n",
+    "        \n",
+    "    def _model(self, z, x):\n",
+    "        z = self.backbone(z + x)\n",
+    "        return z\n",
+    "    \n",
     "    def forward(self, xs, ys):\n",
     "        horizon_start = max(0, self.n_loops - self.n_loop_window)\n",
     "        x = self.create_prompt(xs, ys)\n",
-    "        z = x = self.read_in(x)\n",
+    "        x = self.read_in(x)\n",
+    "        z = torch.zeros_like(x)\n",
     "        preds = []\n",
     "        for i in range(self.n_loops):\n",
     "            if i < horizon_start:\n",
-    "                with torch.no_grad(): z = super().forward(z) + x\n",
+    "                with torch.no_grad(): z = self._model(z, x)\n",
     "                continue\n",
-    "            z = super().forward(z) + x\n",
+    "            z = self._model(z, x)\n",
     "            y = self.read_out(z).squeeze(-1)\n",
     "            preds.append(y[:, ::self.freq])\n",
-    "        return y"
+    "            if self.cfg.keep_n_tokens: \n",
+    "                z = z[:, -self.cfg.keep_n_tokens:]\n",
+    "                x = x[:, -self.cfg.keep_n_tokens:]\n",
+    "        return torch.stack(preds) if self.training else preds[-1] # for evaluation, authors only use the last prediction\n",
+    "\n",
+    "def loop_loss(preds, ys): return F.mse_loss(preds, ys.expand_as(preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "def get_model(cfg):\n",
+    "    models = {\n",
+    "        'gpt2': Transformer,\n",
+    "        'gpt2_loop': LoopedTransformer\n",
+    "    }\n",
+    "    return models[cfg.family](cfg)\n",
+    "\n",
+    "def get_loss(cfg):\n",
+    "    losses = {\n",
+    "        'gpt2': F.mse_loss,\n",
+    "        'gpt2_loop': loop_loss\n",
+    "    }\n",
+    "    return losses[cfg.family]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = get_config(overrides=['model=loop'])\n",
+    "# show_config(cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LoopedTransformer(cfg.model).to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from looped_experiments.tasks import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs,ys = LinearRegression(64,**cfg.tasks)()\n",
+    "xs, ys = xs.to('cuda'), ys.to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model(xs, ys)"
    ]
   }
  ],
@@ -237,6 +225,10 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
