simplifications and utils

--- a/nbs/03_training.ipynb
+++ b/nbs/03_training.ipynb
@@ -22,7 +22,8 @@
     "import torch.nn.functional as F\n",
     "from fastprogress import master_bar, progress_bar\n",
     "from omegaconf import OmegaConf\n",
-    "from torch import optim"
+    "from torch import optim\n",
+    "from looped_experiments.utils import def_device, to_device, to_cpu"
    ]
   },
   {
@@ -48,6 +49,7 @@
     "        self.model, self.dl_train, self.dl_valid, self.n_epoch, self.loss_fn, self.cbs \\\n",
     "            = model, dl_train, dl_valid, n_epoch, loss_fn, cbs\n",
     "        self.optimizer = optimizer(model.parameters(), lr=lr, weight_decay=wd)\n",
+    "        self.mb = None\n",
     "\n",
     "    @with_cbs(\"fit\")\n",
     "    def fit(self, lr=None, n_epoch=None):\n",
@@ -58,32 +60,29 @@
     "        self.train_step = 0\n",
     "        self.mb = master_bar(range(n_epoch))\n",
     "        for i in self.mb:\n",
-    "            self.one_epoch(True)\n",
+    "            self.one_epoch(True, self.dl_train)\n",
     "            self.mb.write(f\"Epoch {i} Loss: {self.loss.item()}\")\n",
-    "            torch.no_grad()(self.one_epoch)(False)\n",
+    "            torch.no_grad()(self.one_epoch)(False, self.dl_valid)\n",
     "            self.mb.write(f\"Valid Loss: {self.loss.item()}\")\n",
-    "\n",
-    "    def predict(self, dl=None):\n",
+    "    \n",
+    "    @with_cbs(\"fit\")\n",
+    "    def eval(self, dl=None):\n",
     "        dl = dl or self.dl_valid\n",
-    "        self.model.eval()\n",
-    "        preds = []\n",
-    "        for b in progress_bar(dl, total=len(dl)):\n",
-    "            xb, _ = b\n",
-    "            preds.append(self.model(*xb).detach().cpu())\n",
-    "        return torch.cat(preds)\n",
-    "\n",
-    "    def one_epoch(self, training):\n",
+    "        torch.no_grad()(self.one_epoch)(False, dl)\n",
+    "    \n",
+    "    @with_cbs(\"epoch\")\n",
+    "    def one_epoch(self, training, dl):\n",
     "        self.model.train(training)\n",
-    "        dl = self.dl_train if training else self.dl_valid\n",
     "        for b in progress_bar(dl, parent=self.mb, total=len(dl)):\n",
     "            self.xb, self.yb = b\n",
     "            self.one_batch()\n",
-    "            self.mb.child.comment = f\"Loss: {self.loss.item()}\"\n",
+    "            if self.mb:\n",
+    "                self.mb.child.comment = f\"Loss: {self.loss.item()}\"\n",
     "\n",
     "    @with_cbs(\"batch\")\n",
     "    def one_batch(self):\n",
-    "        y_hat = self.model(*self.xb)\n",
-    "        self.loss = self.loss_fn(y_hat, self.yb)\n",
+    "        self.preds = self.model(*self.xb)\n",
+    "        self.loss = self.loss_fn(self.preds, self.yb)\n",
     "        if self.model.training:\n",
     "            self.loss.backward()\n",
     "            self.optimizer.step()\n",
@@ -104,10 +103,6 @@
    "source": [
     "# | export\n",
     "\n",
-    "def default_device():\n",
-    "    is_cuda = torch.cuda.is_available()\n",
-    "    return torch.device(\"cuda\" if is_cuda else \"cpu\")\n",
-    "\n",
     "\n",
     "class Callback:\n",
     "    order = 0\n",
@@ -115,13 +110,13 @@
     "\n",
     "\n",
     "class ToDeviceCB(Callback):\n",
-    "    def __init__(self, device=default_device()): self.device = device\n",
+    "    def __init__(self, device=def_device): self.device = device\n",
     "\n",
     "    def before_fit(self, learn):\n",
     "        self.model = learn.model.to(self.device)\n",
     "\n",
     "    def before_batch(self, learn):\n",
-    "        learn.xb, learn.yb = learn.xb.to(self.device), learn.yb.to(self.device)\n",
+    "        learn.xb, learn.yb = to_device(learn.xb, self.device), to_device(learn.yb, self.device)\n",
     "\n",
     "\n",
     "class FnCallback(Callback):\n",
@@ -143,7 +138,7 @@
     "    def after_batch(self, learn):\n",
     "        if learn.train_step % self.save_every_n == 0:\n",
     "            torch.save(learn.model.state_dict(), self.dir / f\"model_{learn.train_step}.pt\")\n",
-    "        files = sorted(self.dir.glob(\"model_*.pt\"), key=lambda x: int(x.stem.split(\"_\")[1]), reverse=True)\n",
+    "        files = sorted(self.dir.glob(\"model_*.pt\"), key=lambda x: x.stem.split(\"_\")[1], reverse=True)\n",
     "        if len(files) > self.max_to_keep:\n",
     "            for f in files[self.max_to_keep:]: f.unlink()\n",
     "\n",
@@ -262,7 +257,7 @@
    "outputs": [],
    "source": [
     "train = cfg.training\n",
-    "task = LinearRegression(train.batch_size, **cfg.tasks)\n",
+    "task = LinearRegression(train.batch_size, **cfg.task)\n",
     "dl_train = dataloader(task, train.train_steps)\n",
     "dl_eval = dataloader(task, train.eval_steps)"
    ]
