--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xs,ys = LinearRegression(64,**cfg.tasks)()\n",
+    "xs,ys = LinearRegression(64,**cfg.task)()\n",
     "xs, ys = xs.to('cuda'), ys.to('cuda')"
    ]
   },
@@ -225,10 +225,6 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.9"
   }
  },
  "nbformat": 4,
